# elevmap

./: CMakeLists.txt  README.md
cmake/: MobilePlannerConfig.cmake.in  elevmapConfig.cmake.in
cmake/dependency/: boost.cmake  eigen.cmake  pcl.cmake  yaml-cpp.cmake
include/elevmap/: elevation_map.h
include/mobile_planner/: elevation_map.h
python/: elevation_mapping_direct.py  elevation_mapping_full_gaussian.py
src/: elevation_map.cpp  grid_map.cpp
test/: test_map_plan_static.cpp  test_pc_file_mapping.cpp
